--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infinity Scroll</title>
+    <title>Buy My Space Catalog</title>
     <link rel="icon" type="image/png" href="./sources/favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Title -->
-    <h1>Infinity Scroll using Unsplash API</h1>
+    <h1>Buy My Space Catalog</h1>
     <!-- Loader -->
     <div class="loader" id="loader" hidden>
         <img src="./sources/loading.svg" alt="Sloading">
