--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Title -->
-    <h1>Buy My Space Catalog</h1>
+    <h1>Buy My Space Our Catalog</h1>
     <!-- Loader -->
     <div class="loader" id="loader" hidden>
         <img src="./sources/loading.svg" alt="Sloading">
